Change file structure again + fix kakurosolver